--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@ionic/angular": "^8.4.3",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
+    "swiper": "^11.2.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
