--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/dialog": "^7.0.1",
     "@capacitor/haptics": "^7.0.0",
     "@capacitor/keyboard": "7.0.0",
+    "@capacitor/preferences": "^7.0.1",
     "@capacitor/status-bar": "7.0.0",
     "@capacitor/toast": "^7.0.1",
     "@ionic/angular": "^8.0.0",
