--- a/.gitignore
+++ b/.gitignore
@@ -1,76 +1,100 @@
-# Specifies intentionally untracked files to ignore when using Git
-# http://git-scm.com/docs/gitignore
-
+# General
 *~
 *.sw[mnpcod]
 .tmp
 *.tmp
 *.tmp.*
-UserInterfaceState.xcuserstate
-$RECYCLE.BIN/
-
 *.log
 log.txt
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
 
+# Operating System
+.DS_Store
+Thumbs.db
+.Trashes
+$RECYCLE.BIN/
 
-/.sourcemaps
-/.versions
-/coverage
-
-# Ionic
-/.ionic
-/www
-/platforms
-/plugins
-
-# Compiled output
+# Node
+node_modules/
 /dist
-/tmp
+/www
 /out-tsc
 /bazel-out
 
-# Node
-/node_modules
-npm-debug.log
-yarn-error.log
+# Angular & Ionic
+/.angular
+/.angular/cache
+/.ionic
+/.nx
+/.nx/cache
+/connect.lock
+/coverage
+/typings
 
-# IDEs and editors
+# IDE & Editors
 .idea/
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-project
-*.sublime-workspace
-
-# Visual Studio Code
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-.history/*
+.history/
+*.sublime-project
+*.sublime-workspace
+.project
+.classpath
+.settings/
 
+# Environments & Security
+.env
+.env.*
+env.js
+src/environments/environment.prod.ts
+# Keep environment.ts if it's the template, ignore if it contains secrets. Assuming standard Angular, we keep environment.ts but ignore explicit secret files.
 
-# Miscellaneous
-/.angular
-/.angular/cache
-.sass-cache/
-/.nx
-/.nx/cache
-/connect.lock
-/coverage
+# Mobile - Android
+android/.gradle
+android/local.properties
+android/captures/
+android/app/build
+android/build
+**/*.ap_
+**/*.apk
+**/*.aab
+**/*.dex
+**/resources/android/
+
+# Mobile - iOS
+ios/.generated/
+ios/.nvmrc
+ios/App/App.xcodeproj/project.xcworkspace/
+ios/App/App.xcarchive
+ios/App/Pods/
+ios/App/public/
+**/*.ipa
+**/*.dSYM
+**/resources/ios/
+
+# Capacitor
+capacitor.config.json
+capacitor.settings.gradle
+app/capacitor.build.gradle
+android/app/src/main/assets/public
+android/app/src/main/assets/capacitor.config.json
+android/app/src/main/assets/capacitor.plugins.json
+android/app/src/main/res/xml/config.xml
+
+# Keystores & Secrets
+*.jks
+*.keystore
+**/*.keystore
+**/keystore/
+google-services.json
+GoogleService-Info.plist
+
+# Testing
+/testem.log
 /libpeerconnection.log
-testem.log
-/typings
-
-# System files
-.DS_Store
-Thumbs.db
-
-resources/android/**/*
-.vscode/
-
-**/android/app/release
-**/keystore
