feat: Secure API key in settings and fix Android build environment
- Refactor Settings UI to mask API key and show status only
- Resolve Android build issues by using internal JBR
- Update Capacitor dependencies for v7 compatibility
- Restore app icons and splash screens

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/router": "^19.0.0",
     "@capacitor/android": "7.1.0",
     "@capacitor/app": "7.0.0",
-    "@capacitor/browser": "^8.0.0",
+    "@capacitor/browser": "^7.0.0",
     "@capacitor/clipboard": "^7.0.1",
     "@capacitor/core": "7.1.0",
     "@capacitor/dialog": "^7.0.1",
@@ -34,7 +34,7 @@
     "@capacitor/share": "^7.0.2",
     "@capacitor/status-bar": "7.0.0",
     "@capacitor/toast": "^7.0.1",
-    "@capawesome/capacitor-file-picker": "^8.0.1",
+    "@capawesome/capacitor-file-picker": "^7.0.0",
     "@ionic/angular": "^8.0.0",
     "animate.css": "^4.1.1",
     "ionicons": "^7.0.0",
@@ -52,6 +52,7 @@
     "@angular/cli": "^19.0.0",
     "@angular/compiler-cli": "^19.0.0",
     "@angular/language-service": "^19.0.0",
+    "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "7.1.0",
     "@ionic/angular-toolkit": "^12.0.0",
     "@types/jasmine": "~5.1.0",
